// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ethRewards AutoBet should undo auto-bet 1`] = `
Object {
  "investment": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "amount": 0.5,
    "community": "relevant",
    "communityId": "c00000000000000000000001",
    "createdAt": "[SANITIZED]",
    "downVotes": 0,
    "investor": "b00000000000000000000000",
    "isManualBet": false,
    "ownPost": false,
    "paidOut": false,
    "partialRelevance": 0,
    "partialUsers": 0,
    "post": "000000000000000000000003",
    "rankChange": "[SANITIZED]",
    "relevance": 0,
    "relevantPoints": 0,
    "shares": 1.951644903827174,
    "stakedTokens": 11.100000000000001,
    "updatedAt": "[SANITIZED]",
    "upvotes": 0,
  },
  "rankChange": "[SANITIZED]",
  "subscription": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "amount": 0,
    "category": Array [],
    "community": "relevant",
    "communityId": "c00000000000000000000001",
    "createdAt": "[SANITIZED]",
    "follower": "b00000000000000000000000",
    "updatedAt": "[SANITIZED]",
  },
  "success": true,
  "undoInvest": true,
}
`;

exports[`ethRewards Bet should bet on post 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "amount": 0.5,
  "community": "relevant",
  "communityId": "c00000000000000000000001",
  "createdAt": "[SANITIZED]",
  "downVotes": 0,
  "investor": "a00000000000000000000000",
  "isManualBet": true,
  "ownPost": false,
  "paidOut": false,
  "partialRelevance": 0,
  "partialUsers": 0,
  "post": "000000000000000000000003",
  "rankChange": "[SANITIZED]",
  "relevance": 0,
  "relevantPoints": 0,
  "shares": 4.711687595755899,
  "stakedTokens": 11.100000000000001,
  "updatedAt": "[SANITIZED]",
  "upvotes": 0,
}
`;

exports[`ethRewards Invest should create invest without bet 1`] = `
Object {
  "investment": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "amount": 0.5,
    "community": "relevant",
    "communityId": "c00000000000000000000001",
    "createdAt": "[SANITIZED]",
    "downVotes": 0,
    "investor": "a00000000000000000000000",
    "isManualBet": true,
    "ownPost": false,
    "paidOut": false,
    "partialRelevance": 0,
    "partialUsers": 0,
    "post": "000000000000000000000003",
    "rankChange": "[SANITIZED]",
    "relevance": 0,
    "relevantPoints": 0,
    "shares": 0,
    "stakedTokens": 0,
    "updatedAt": "[SANITIZED]",
    "upvotes": 0,
  },
  "rankChange": "[SANITIZED]",
  "subscription": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "amount": 3,
    "category": Array [],
    "community": "relevant",
    "communityId": "c00000000000000000000001",
    "createdAt": "[SANITIZED]",
    "follower": "a00000000000000000000000",
    "updatedAt": "[SANITIZED]",
  },
  "success": true,
  "undoInvest": false,
}
`;
